<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <tkhub.project.autoonlineadmin.Font.FontApp
        android:text="@string/string_quotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dip"
        android:id="@+id/textView3"
        android:textSize="12sp"
        android:textColor="@color/appLightBlue" />

    <tkhub.project.autoonlineadmin.Font.FontAppBold
        android:text="@string/string_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignLeft="@+id/relativeLayoutloginBoder"
        android:layout_alignStart="@+id/relativeLayoutloginBoder"
        android:layout_below="@+id/imageView2"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:src="@drawable/logo"
        android:layout_width="300dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_height="250dip" />

    <RelativeLayout
        android:id="@+id/relativeLayoutloginBoder"
        android:layout_width="300dp"
        android:background="@drawable/borders"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        android:layout_height="110dp">

        <RelativeLayout
            android:id="@+id/relativeLayoutloginusername"
            android:layout_width="match_parent"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/relativeLayoutloginBoder"
            android:layout_alignStart="@+id/relativeLayoutloginBoder"
            android:layout_marginTop="10dp"
            android:layout_height="40dp">

            <TextView
                android:text="@string/string_loginUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textColor="@android:color/black"
                android:layout_alignTop="@+id/relativeLayout2"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp" />

            <EditText
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edt_log_username"
                android:layout_width="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView4"
                android:layout_toEndOf="@+id/textView4"
                android:layout_height="40dp"
                android:hint="User Name" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/relativeLayoutloginusername"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:text="@string/string_loginPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textColor="@android:color/black"
                android:layout_alignTop="@+id/relativeLayout2"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp" />

            <EditText
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editTextpass"
                android:layout_width="200dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/textView5"
                android:layout_toEndOf="@+id/textView5"
                android:layout_height="40dp"
                android:hint="Password" />
        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:text="@string/button_Login"
        android:layout_width="wrap_content"
        android:layout_below="@+id/relativeLayoutloginBoder"
        android:layout_marginTop="15dp"
        android:id="@+id/btnLogin"
        android:layout_alignRight="@+id/relativeLayoutloginBoder"
        android:layout_alignEnd="@+id/relativeLayoutloginBoder"
        android:layout_alignLeft="@+id/relativeLayoutloginBoder"
        android:layout_alignStart="@+id/relativeLayoutloginBoder"
        android:layout_height="40dp"
        android:background="@drawable/button_blue"
        android:textSize="18sp"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:id="@+id/relativeLayoutskip"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="30dp">

    </RelativeLayout>

    <RelativeLayout

        android:id="@+id/relativeLayoutforgot"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <tkhub.project.autoonlineadmin.Font.FontAppBold
            android:text="Forget Password ? "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_login_forgot"
            android:textColor="@color/appDarkBlue"
            android:layout_alignTop="@+id/relativeLayout12"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</RelativeLayout>