<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:background="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/relativeLayout1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp">

            <RelativeLayout
                android:id="@+id/relativeLayout11"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout30"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/relativeLayout11"
                android:layout_toEndOf="@+id/relativeLayout11"
                android:layout_marginLeft="40dp">

                <tkhub.project.autoonlineadmin.Font.TextViewFontAwesome
                    android:text="@string/icon_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fromDegrees="0"
                    android:toDegrees="90"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/textView31"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="36sp" />

                <TextView
                    android:text="Call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/textView33" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout20"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/relativeLayout11"
                android:layout_toStartOf="@+id/relativeLayout11"
                android:layout_marginRight="40dp">

                <tkhub.project.autoonlineadmin.Font.TextViewFontAwesome
                    android:text="@string/icon_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/textView41"
                    android:textColor="@android:color/holo_purple"
                    android:textSize="36sp" />

                <TextView
                    android:text="User Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/textView43" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="80dp">

                <tkhub.project.autoonlineadmin.Font.TextViewFontAwesome
                    android:text="@string/icon_deliverd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/textView18"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="36sp" />

                <TextView
                    android:text="Delivered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/textView19" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout10"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/relativeLayout3"
                android:layout_toRightOf="@+id/relativeLayout3"
                android:layout_width="80dp"
                android:layout_marginLeft="50dp">


                <tkhub.project.autoonlineadmin.Font.TextViewFontAwesome
                    android:text="@string/icon_reject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/textView188"
                    android:textColor="@color/colorReject"
                    android:textSize="36sp" />

                <TextView
                    android:text="Reject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/textView199" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/relativeLayout3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <tkhub.project.autoonlineadmin.Font.TextViewFontAwesome
                    android:text="@string/icon_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/textView21"
                    android:textColor="@color/appDarkBlue"
                    android:textSize="36sp" />

                <TextView
                    android:text="On Progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/textView22" />

            </RelativeLayout>


        </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>